Criacao do componente produto-criar e alteracao nos demais componentes que compoem o produto

--- a/src/app/views/produto-crud/produto-crud.component.html
+++ b/src/app/views/produto-crud/produto-crud.component.html
@@ -1,1 +1,4 @@
-<button mat-raised-button (click)="navigateToProductCreate()">Novo Produto</button>
+<button mat-raised-button (click)="navigateToProductCreate()" color="primary">Novo Produto</button>
+
+<app-produto-listar></app-produto-listar>
+<app-produto-listar2></app-produto-listar2>
