--- a/src/app/components/produto/produto-criar/produto-criar.component.html
+++ b/src/app/components/produto/produto-criar/produto-criar.component.html
@@ -1,4 +1,15 @@
-<p>produto-criar works!</p>
+<mat-card>
+    <mat-card-title>Novo Produto</mat-card-title>
 
-<button mat-raised-button (click)="criarProduto()" color="primary">Salvar</button>
-<button mat-raised-button (click)="cancelar()">Cancelar</button>
+    <form autocomplete="off">
+        <mat-form-field>
+            <input matInput placeholder="Nome" [(ngModel)]="produto.nome" name="nome">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Preço (R$)" [(ngModel)]="produto.preco" name="preco">
+        </mat-form-field>
+    </form>
+
+    <button mat-raised-button (click)="criarProduto()" color="primary">Salvar</button>
+    <button mat-raised-button (click)="cancelar()">Cancelar</button>
+</mat-card>
