Finalização do projeto

--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -3,11 +3,12 @@
         <a routerLink="/"><i class="material-icons">dashboard</i> Componente Cabeçalho</a>
     </span>
     <span class="title-group">
-        <a>
+        <a routerLink="{{ routeUrl }}">
             <i class="material-icons">
-                home
+                {{ icone }}
             </i>
-            Início
+            
+            {{ titulo }}
         </a>
     </span>
 
