--- a/src/app/components/produto/produto-listar/produto-listar.component.html
+++ b/src/app/components/produto/produto-listar/produto-listar.component.html
@@ -1,5 +1,43 @@
-<ul>
-    <li *ngFor="let produto of produtos">
-        {{ produto.nome }}
-    </li>
-</ul>
+<div class="mat-elevation-z4">
+    <table mat-table [dataSource]="produtos">
+      <!-- Id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let row">{{row.id}}</td>
+      </ng-container>
+  
+      <!-- Nome Column -->
+      <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef="let row">{{row.nome}}</td>
+      </ng-container>
+  
+      <!-- Preco Column -->
+      <ng-container matColumnDef="preco">
+        <th mat-header-cell *matHeaderCellDef>Preco</th>
+        <td mat-cell *matCellDef="let row">{{row.preco | currency: 'BRL'}}</td>
+      </ng-container>
+
+      <!-- Ações Column -->
+      <ng-container matColumnDef="acoes">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let row">
+
+          <a routerLink="/produtos/editar/{{ row.id }}" class="edit" title="Editar">
+            <i class="material-icons">edit</i>
+          </a>
+
+          <a routerLink="/produtos/apagar/{{ row.id }}" class="delete" title="Deletar">
+            <i class="material-icons">delete</i>
+          </a>
+        </td>
+      </ng-container>
+      
+      <!--Colunas-->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+
+      <!--Dados-->
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+  
